# ferrumvault-public

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build-instructions.sh  clean-profile.sh  harness.sh  package.json
.github/workflows/: ci.yml  publish-docs.yml
docs/: user-guide.md
src/: crypto.rs  lib.rs  main.rs  sync.rs  ui.rs  vault.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/db/: mod.rs  schema.rs
