[package]
name = "credmanager_app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive", "env"] }
rpassword = "7.2"
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled", "hooks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4"] }
zeroize = "1.8"
dirs = "5.0"
tempfile = "3.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
hex = "0.4"
whoami = "1.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
urlencoding = "2.1"
once_cell = "1.19"
